<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RAMIL."
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        android:textColor="@color/bgcolor"/>
    <TextView
        android:id="@+id/userhome"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="UserEmail"
        android:textSize="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_gravity="center"
        android:padding="1dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/newtrip"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="21dp"
            android:foregroundGravity="center"
            app:cardBackgroundColor="#E0D9D0"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="241dp"
                    android:text="NEW TRIP"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="217dp"
                    android:layout_height="36dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="109dp"
                    android:text="Record your trip now"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="115dp"
                    android:layout_height="96dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="-5dp"
                    android:layout_marginEnd="-2dp"
                    app:srcCompat="@drawable/desert" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/pretrip"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="133dp"
            android:layout_marginEnd="21dp"
            android:foregroundGravity="center"
            app:cardBackgroundColor="#E0D9D0"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="178dp"
                    android:text="@string/previous_trips"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="218dp"
                    android:layout_height="31dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="108dp"
                    android:text="See your trips history"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="91dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/histo" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sosbtn"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="233dp"
            android:layout_marginEnd="21dp"
            android:foregroundGravity="center"
            app:cardBackgroundColor="#E0D9D0"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="292dp"
                    android:text="@string/sos"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="236dp"
                    android:layout_height="24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="90dp"
                    android:text="Click for requesting HELP !"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="66dp"
                    android:layout_height="56dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="18dp"
                    app:srcCompat="@drawable/sosicon" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/cbtn"
        android:text="@string/logout"
        android:textColor="@color/black" />


</LinearLayout>